# All changes to networkD3 are documented here.

## Version 0.1.8

- Added `bounded` argument to `forceNetwork` to allow the user to created a
bounding box for the plot. See http://bl.ocks.org/mbostock/1129492.
Thank you to Charles Sese.

## Version 0.1.7

- Include `JS` from htmlwidgets, to make it easier for users to pass arbitrary
JS to more arguments.

- Other internal code and documentation improvements.

## Version 0.1.6

- `fontSize` used for all functions rather than `fontsize`. Thank you to
@Hunter-Github for spotting this inconsistency.

## Version 0.1.5

- Minor improvement to treeNetwork documentation.
Thanks to Steven Beaupré and MrFlick.

## Version 0.1.4

- `forceNetwork` gains three new arguments.

    + `legend` allows you to add a node colour legend.

    + `radiusCalculation` and `Nodesize` allow you to vary node radius by
some values.

Thank you to Charles Sese for these additions.

## Version 0.1.3

- `zoom` argument added to `simpleNetwork` and `forceNetwork` to allow zooming.
Thanks to @timelyportfolio.

- Updated `treeNetwork` URL.

## Version 0.1.2.2

- Update link in `forceNetwork` example.

## Version 0.1.2.1

Enhanced flexibility when using data frames manipulated with dplyr/data.table.
Thanks to Kevin Kuo.

## Version 0.1.2

- Minor internal correction to d3.js version number.

## Version 0.1.1

- `treeNetwork` added allowing the user to create tree networks. Thanks to
B.W. Lewis.

- Upgrade to d3.js version 3.5.2.

## Version 0.1

- `sankeyNetwork` added.

- `colourScale` argument added to `forceNetwork` and `sankeyNetwork` to allow
the user to change the node colour scale.