@@ -7,6 +7,12 @@ target <- c("B", "C", "D", "J", "E", "F", "G", "H", "I")
 networkData <- data.frame(src, target)
 simpleNetwork(networkData)
 
+# with R's sans serif font (might not be recognised in browser; works in RStudio pane)
+simpleNetwork(networkData, fontFamily = "sans serif")
+
+# with Arial (works in browser as well):
+simpleNetwork(networkData, fontFamily = "Arial")
+
 # forceNetwork 
 data(MisLinks)
 data(MisNodes)
@@ -15,6 +21,13 @@ data(MisNodes)
 forceNetwork(Links = MisLinks, Nodes = MisNodes, Source = "source",
              Target = "target", Value = "value", NodeID = "name",
              Group = "group", opacity = 1, zoom = F, bounded = T)
+
+# With Arial font
+forceNetwork(Links = MisLinks, Nodes = MisNodes, Source = "source",
+             Target = "target", Value = "value", NodeID = "name",
+             Group = "group", opacity = 1, zoom = F, bounded = T,
+             fontFamily = "Arial")
+
 
 # Create graph with legend and varying radius
 forceNetwork(Links = MisLinks, Nodes = MisNodes, Source = "source",
@@ -27,6 +40,10 @@ forceNetwork(Links = MisLinks, Nodes = MisNodes, Source = "source",
              Target = "target", Value = "value", NodeID = "name",
              Nodesize = 'size', radiusCalculation = " Math.sqrt(d.nodesize)+6",
              Group = "group", opacity = 1, legend = T, bounded = T) 
+
+
+
+
 
 # sankeyNetwork
 library(RCurl)
@@ -41,7 +58,16 @@ sankeyNetwork(Links = EngLinks, Nodes = EngNodes, Source = "source",
               Target = "target", Value = "value", NodeID = "name",
               fontSize = 12, nodeWidth = 30)
 
+# And with Arial font
+sankeyNetwork(Links = EngLinks, Nodes = EngNodes, Source = "source",
+              Target = "target", Value = "value", NodeID = "name",
+              fontSize = 12, nodeWidth = 30, fontFamily = "Arial")
+
+
 # treeNetwork
 Flare <- RCurl::getURL("https://gist.githubusercontent.com/mbostock/4063550/raw/a05a94858375bd0ae023f6950a2b13fac5127637/flare.json")
 Flare <- rjson::fromJSON(Flare)
 treeNetwork(List = Flare, fontSize = 10, opacity = 0.9, margin=0)
+
+# and with Arial font
+treeNetwork(List = Flare, fontSize = 10, opacity = 0.9, margin=0, fontFamily = "Arial")
