@@ -11,7 +11,7 @@ specifically for force directed networks
 \usage{
 forceNetwork(Links, Nodes, Source, Target, Value, NodeID, Nodesize, Group,
   height = NULL, width = NULL, colourScale = JS("d3.scale.category20()"),
-  fontSize = 7, linkDistance = 50,
+  fontSize = 7, fontFamily = "serif", linkDistance = 50,
   linkWidth = JS("function(d) { return Math.sqrt(d.value); }"),
   radiusCalculation = JS(" Math.sqrt(d.nodesize)+6"), charge = -120,
   linkColour = "#666", opacity = 0.6, zoom = FALSE, legend = FALSE,
@@ -56,6 +56,8 @@ scale for the nodes. See
 \url{https://github.com/mbostock/d3/wiki/Ordinal-Scales}.}
 
 \item{fontSize}{numeric font size in pixels for the node text labels.}
+
+\item{fontFamily}{font family for the node text labels.}
 
 \item{linkDistance}{numeric or character string. Either numberic fixed
 distance between the links in pixels (actually arbitrary relative to the
